just need to push what I have

--- a/index.html
+++ b/index.html
@@ -8,16 +8,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <p>
+        <input id="name-input">
+        <button id="change-button">Enter Name</button>
+    </p>
+
+    <p>
+    <span id="name-display">Isaac</span>
+    </p>
+
     <main>
         <div class="hi">
           <p id="hello"><strong>HELLO</strong></p>
           <p id="me">my name is</p>
         </div>
 
-        <div>
-            <p id="name">Isaac</p>
-        </div>
         <div class="background"></div>
     </main>
+    <p>
+        <span id="times-changed"></span>
+    </p>
+    <script type="module" src="app.js"></script>
 </body>
 </html>
